# Akizuki-Rustgal

./: .gitignore  Cargo.toml  HANDOFF.md
.github/workflows/: dev-build.yml  editor-build.yml  release.yml
crates/akrs-cli/: Cargo.toml
crates/akrs-cli/examples/: proc_macro_demo.rs
crates/akrs-cli/scripts/: demo.akrs
crates/akrs-cli/src/: main.rs  migrate.rs
crates/akrs-core/: Cargo.toml
crates/akrs-core/src/: ast.rs  checker.rs  diagnostic.rs  lexer.rs  lib.rs  parser.rs  project.rs  token.rs  value.rs  vm.rs
crates/akrs-editor/: Cargo.toml  build.rs
crates/akrs-editor/src/: lib.rs  main.rs
crates/akrs-game/: Cargo.toml
crates/akrs-game/src/: main.rs
crates/akrs-macros/: Cargo.toml
crates/akrs-macros/src/: lib.rs
crates/akrs-pack/: Cargo.toml
crates/akrs-pack/src/: lib.rs
crates/akrs-render/: Cargo.toml
crates/akrs-render/src/: assets.rs  lib.rs  renderer.rs
crates/akrs-runtime/: Cargo.toml
crates/akrs-runtime/saves/: save_000.json
crates/akrs-runtime/src/: engine.rs  game_state.rs  hot_reload.rs  lib.rs  save_load.rs  settings.rs  transition.rs
docs/: dsl-specification.html  立绘摆放语法.md
patches/macroquad/: .cargo_vcs_info.json  Cargo.toml
patches/macroquad/src/: lib.rs  quad_gl.rs  telemetry.rs  text.rs  ui.rs
patches/macroquad/src/experimental/: scene.rs
patches/macroquad/src/experimental/collections/: storage.rs
patches/macroquad/src/ui/render/: painter.rs
scripts/: demo.akrs
