[package]
name = "akrs-game"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "akrs-game"
path = "src/main.rs"

[dependencies]
akrs-core = { workspace = true }
akrs-runtime = { workspace = true }
akrs-render = { workspace = true }
macroquad = { workspace = true }
