[package]
name = "akrs-macros"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
akrs-core = { workspace = true }
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-error2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
